--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "express": "~4.16.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
     "chai": "^4.3.6",
