--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "swagger-ui-express": "^4.5.0",
     "yamljs": "^0.3.0"
