--- a/server/package.json
+++ b/server/package.json
@@ -16,13 +16,14 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.2",
     "ejs": "^3.1.8",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
     "joi": "^17.6.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
+    "redis": "^4.5.1",
     "sequelize": "^6.25.3",
     "swagger-ui-express": "^4.5.0",
     "yamljs": "^0.3.0"
