--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.3.2",
     "classnames": "^2.3.1",
+    "joi": "^17.7.0",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.0",
