--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "compression": "^1.7.4",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-ejs-layouts": "^2.5.1",
+    "helmet": "^6.0.1",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
@@ -26,6 +28,7 @@
     "redis": "^4.5.1",
     "sequelize": "^6.25.3",
     "swagger-ui-express": "^4.5.0",
+    "winston": "^3.8.2",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
